sofia changes for terrestrial

--- a/data/notebooks/pipes_mock/locations.ipynb
+++ b/data/notebooks/pipes_mock/locations.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,8 +24,11 @@
     "import geopandas as gpd\n",
     "import numpy as np\n",
     "import json\n",
+    "import dotenv\n",
     "\n",
-    "scripts_dir = Path(\"../../\").joinpath(\"src\")\n",
+    "dotenv.load_dotenv()\n",
+    "\n",
+    "scripts_dir = Path(\".\").joinpath(\"src\")\n",
     "if scripts_dir not in sys.path:\n",
     "    sys.path.insert(0, scripts_dir.resolve().as_posix())\n",
     "\n",
@@ -82,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,47 +96,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/sofia/dev/skytruth-30x30/data/data/eez/processed/eez_preprocess.zip\n",
+      "/home/sofia/dev/skytruth-30x30/data/data/eez/processed/preprocess\n",
+      "/home/sofia/dev/skytruth-30x30/data/data/gadm/processed/gadm_preprocess.zip\n",
+      "/home/sofia/dev/skytruth-30x30/data/data/gadm/processed/preprocess\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "PosixPath('/home/sofia/dev/skytruth-30x30/data/data/gadm/processed/preprocess')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pipe_eez = \"eez\"\n",
     "pipe_eez_dir = FileConventionHandler(pipe_eez)\n",
     "pipe_gadm = \"gadm\"\n",
     "pipe_gadm_dir = FileConventionHandler(pipe_gadm)\n",
     "\n",
-    "output_file = pipe_gadm_dir.get_processed_step_path(current_step).joinpath(\"locations.json\")\n",
+    "output_file = pipe_gadm_dir.get_processed_step_path(current_step).joinpath(\"locations_all.json\")\n",
     "\n",
     "# Download the EEZ file && unzip it\n",
     "download_and_unzip_if_needed(pipe_eez_dir, prev_step, mysettings)\n",
     "\n",
-    "# Download the EEZ file && unzip it\n",
+    "# Download the gadm file && unzip it\n",
     "download_and_unzip_if_needed(pipe_gadm_dir, prev_step, mysettings)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import Union, List\n",
+    "from typing import List\n",
     "import pandera as pa\n",
     "from pandera.typing import Index, Series\n",
-    "from pandera.typing.geopandas import GeoDataFrame, GeoSeries\n",
     "import pandas as pd\n",
     "\n",
     "class LocationSchemaAll(pa.DataFrameModel):\n",
     "    id: Index[int] = pa.Field(gt=0, coerce=True)\n",
     "    code: Series[str] = pa.Field(coerce=True)\n",
     "    name: Series[str] = pa.Field(coerce=True)\n",
-    "    totalMarineArea: Series[float] = pa.Field(ge=0, coerce=True)  # noqa: N815\n",
-    "    totalLandArea: Series[float] = pa.Field(ge=0, coerce=True)  # noqa: N815\n",
+    "    name_es: Series[str] = pa.Field(coerce=True)\n",
+    "    name_fr: Series[str] = pa.Field(coerce=True)\n",
+    "    total_marine_area: Series[float] = pa.Field(ge=0, coerce=True)  # noqa: N815\n",
+    "    total_terrestrial_area: Series[float] = pa.Field(ge=0, coerce=True)  # noqa: N815\n",
     "    type: Series[str] = pa.Field(\n",
     "        unique_values_eq=[\"country\", \"worldwide\", \"region\", \"highseas\"], coerce=True\n",
     "    )\n",
     "    groups: Series[List[int]] = pa.Field(coerce=True)\n",
-    "    bounds: Series[List[float]] = pa.Field(coerce=True)\n",
+    "    marine_bounds: Series[List[float]] = pa.Field(coerce=True, nullable=True)\n",
+    "    terrestrial_bounds: Series[List[float]] = pa.Field(coerce=True, nullable=True)\n",
+    "\n",
+    "def add_translations(df, translations_csv_path):\n",
+    "    translations_df = pd.read_csv(translations_csv_path, keep_default_na=False, na_values=[])\n",
+    "    \n",
+    "    df = df.merge(translations_df[['code', 'name_es', 'name_fr']], left_on='iso', right_on='code', how='left')\n",
+    "    \n",
+    "    return df\n",
     "\n",
     "def calculate_gadm_area(df: pd.DataFrame) -> pd.DataFrame:\n",
     "    glob = gpd.GeoDataFrame(\n",
@@ -187,16 +220,16 @@
     "        )\n",
     "    )\n",
     "\n",
-    "def combine_bounds(marine_bounds, land_bounds):\n",
-    "    # Check if marine bounds are valid\n",
-    "    if isinstance(marine_bounds, list) and len(marine_bounds) == 4:\n",
-    "        return marine_bounds\n",
-    "    # If marine bounds are not valid, check land bounds\n",
-    "    elif isinstance(land_bounds, list) and len(land_bounds) == 4:\n",
-    "        return land_bounds\n",
-    "    # If neither bounds are valid, return an empty list\n",
-    "    else:\n",
-    "        return []\n",
+    "# def combine_bounds(marine_bounds, land_bounds):\n",
+    "#     # Check if marine bounds are valid\n",
+    "#     if isinstance(marine_bounds, list) and len(marine_bounds) == 4:\n",
+    "#         return marine_bounds\n",
+    "#     # If marine bounds are not valid, check land bounds\n",
+    "#     elif isinstance(land_bounds, list) and len(land_bounds) == 4:\n",
+    "#         return land_bounds\n",
+    "#     # If neither bounds are valid, return an empty list\n",
+    "#     else:\n",
+    "#         return []\n",
     "\n",
     "def combine_columns(df, col1, col2, new_col):\n",
     "    \"\"\"\n",
@@ -217,9 +250,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# # Download country translations\n",
+    "working_folder = FileConventionHandler(pipe_gadm)\n",
+    "input_path = working_folder.pipe_raw_path\n",
+    "input_path\n",
+    "\n",
+    "translations_csv_url = \"vizzuality_processed_data/gadm/preprocess/locations_translated.csv\"\n",
+    "translations_csv_output = input_path.joinpath(translations_csv_url.split(\"/\")[-1])\n",
+    "\n",
+    "# writeReadGCP(\n",
+    "#     credentials=mysettings.GCS_KEYFILE_JSON,\n",
+    "#     bucket_name=mysettings.GCS_BUCKET,\n",
+    "#     blob_name=translations_csv_url,\n",
+    "#     file=translations_csv_output,\n",
+    "#     operation=\"r\",\n",
+    "# )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_3347624/1577571524.py:35: DeprecationWarning: The 'unary_union' attribute is deprecated, use the 'union_all()' method instead.\n",
+      "  \"geometry\": gpd.GeoSeries([gpd.GeoSeries(df[\"geometry\"]).unary_union]),\n"
+     ]
+    }
+   ],
    "source": [
     "# Process EEZ data (marine data)\n",
     "locations = (\n",
@@ -232,11 +297,13 @@
     "    .pipe(add_bbox)\n",
     "    .pipe(add_groups_and_members)\n",
     "    .pipe(add_location_name)\n",
+    "    .pipe(add_translations, translations_csv_output)\n",
     "    .rename(\n",
     "        columns={\n",
-    "            \"iso\": \"code\",\n",
-    "            \"AREA_KM2\": \"totalMarineArea\",\n",
+    "           \n",
+    "            \"AREA_KM2\": \"total_marine_area\",\n",
     "            \"location_type\": \"type\",\n",
+    "            \"bounds\":'marine_bounds'\n",
     "        }\n",
     "    )\n",
     ").reset_index(drop=True)\n",
@@ -244,16 +311,15 @@
     "locations.drop(\n",
     "    columns=list(\n",
     "        set(locations.columns) -\n",
-    "        set([\"code\", \"name\", \"totalMarineArea\", \"type\", \"groups\", \"bounds\", \"id\"])\n",
+    "        set([\"code\", \"name\", \"name_es\", \"name_fr\", \"total_marine_area\", \"marine_bounds\", \"type\", \"groups\", \"id\"])\n",
     "    ),\n",
     "    inplace=True,\n",
     ")\n",
     "\n",
     "\n",
-    "# Create a lookup dictionary for IDs from EEZ data\n",
-    "id_lookup = locations.set_index('code')['id'].to_dict()\n",
+    "id_lookup = locations.set_index('code')['id'].to_dict() # Create a lookup dictionary for IDs from EEZ data\n",
     "\n",
-    "# Process GADM data (land data)\n",
+    "# Process GADM data \n",
     "locations_land = (\n",
     "    gpd.read_file(pipe_gadm_dir.get_step_fmt_file_path(prev_step, \"shp\"))\n",
     "    .rename(columns={\"GID_0\": \"iso\", 'area_km2': 'AREA_KM2'})\n",
@@ -263,35 +329,31 @@
     "    .pipe(add_bbox)\n",
     "    .pipe(add_groups_and_members_land)\n",
     "    .pipe(add_location_name)\n",
+    "    .pipe(add_translations, translations_csv_output)\n",
     "    .rename(\n",
     "        columns={\n",
-    "            \"iso\": \"code\",\n",
-    "            \"AREA_KM2\": \"totalLandArea\",\n",
+    "            \"AREA_KM2\": \"total_terrestrial_area\",\n",
     "            \"location_type\": \"type\",\n",
+    "            \"bounds\": \"terrestrial_bounds\"\n",
     "        }\n",
     "    )\n",
     ").reset_index(drop=True)\n",
     "\n",
-    "# Apply the EEZ IDs to the GADM dataset\n",
-    "locations_land['id'] = locations_land['code'].map(id_lookup)\n",
+    "locations_land['id'] = locations_land['code'].map(id_lookup) # Apply the EEZ IDs to the GADM dataset\n",
     "\n",
-    "# Identify the NaN values in the id column\n",
-    "nan_mask = locations_land['id'].isna()\n",
+    "nan_mask = locations_land['id'].isna() # Identify the NaN values in the id column\n",
     "\n",
-    "# Generate new IDs for any GADM rows without an EEZ match\n",
     "new_ids = pd.Series(\n",
     "    range(max(id_lookup.values()) + 1, max(id_lookup.values()) + 1 + nan_mask.sum()),\n",
     "    index=locations_land[nan_mask].index\n",
-    ")\n",
+    ") # Generate new IDs for any GADM rows without an EEZ match\n",
     "\n",
-    "# Assign the new IDs to the NaN values in the id column\n",
-    "locations_land['id'] = locations_land['id'].fillna(new_ids).astype(int)\n",
+    "locations_land['id'] = locations_land['id'].fillna(new_ids).astype(int) # Assign the new IDs to the NaN values in the id column\n",
     "\n",
-    "# Drop unnecessary columns in GADM data\n",
     "locations_land.drop(\n",
     "    columns=list(\n",
     "        set(locations_land.columns) -\n",
-    "        set([\"code\", \"name\", \"totalLandArea\", \"type\", \"groups\", \"bounds\", \"id\"])\n",
+    "        set([\"code\", \"name\", \"name_es\", \"name_fr\", \"total_terrestrial_area\", \"type\", \"groups\", \"terrestrial_bounds\", \"id\"])\n",
     "    ),\n",
     "    inplace=True,\n",
     ")\n",
@@ -301,21 +363,24 @@
     "    locations, locations_land,\n",
     "    on=['code', 'id'],\n",
     "    suffixes=('_marine', '_land'),\n",
-    "    how='outer'  # Use 'outer' join to keep all records\n",
+    "    how='outer'  \n",
     ")\n",
     "\n",
-    "# Replace NaN values in TotalMarineArea and TotalLandArea with 0\n",
-    "combined_locations['totalMarineArea'] = combined_locations['totalMarineArea'].fillna(0)\n",
-    "combined_locations['totalLandArea'] = combined_locations['totalLandArea'].fillna(0)\n",
+    "# Combine data from land and marine for each base column\n",
+    "base_columns = ['type', 'groups', 'name', 'name_es', 'name_fr']\n",
+    "for base_col in base_columns:\n",
+    "    marine_col = f\"{base_col}_marine\"\n",
+    "    land_col = f\"{base_col}_land\"\n",
+    "    combined_locations = combine_columns(combined_locations, marine_col, land_col, base_col)\n",
+    "\n",
+    "# Fill NaN values with 0 for each column\n",
+    "columns_to_fill = ['total_marine_area', 'total_terrestrial_area']\n",
+    "for col in columns_to_fill:\n",
+    "    combined_locations[col] = combined_locations[col].fillna(0)\n",
+    "\n",
+    "# Force the id column to be an integer\n",
     "combined_locations['id'] = combined_locations['id'].astype(int)\n",
     "\n",
-    "# Combine bounding boxes from both datasets\n",
-    "combined_locations['bounds'] = combined_locations.apply(lambda row: combine_bounds(row['bounds_marine'], row['bounds_land']), axis=1)\n",
-    "\n",
-    "# Combine data from land and marine\n",
-    "combined_locations = combine_columns(combined_locations, 'type_marine', 'type_land', 'type')\n",
-    "combined_locations = combine_columns(combined_locations, 'groups_marine', 'groups_land', 'groups')\n",
-    "combined_locations = combine_columns(combined_locations, 'name_marine', 'name_land', 'name')\n",
     "\n",
     "# Drop unnecessary columns\n",
     "combined_locations.drop(\n",
@@ -324,11 +389,12 @@
     ")\n",
     "combined_locations = combined_locations.reset_index(drop=True)\n",
     "\n",
+    "# Force the index to have the values in id column (so they follow the same order in the previous table)\n",
     "combined_locations['index'] = combined_locations['id']\n",
     "combined_locations.set_index('index', inplace=True)\n",
     "combined_locations.sort_index(inplace=True)\n",
     "\n",
-    "# Step 8: Prepare final JSON output (stored in gadm folder)\n",
+    "# Prepare final JSON output (stored in gadm folder)\n",
     "output_locations_combined = {\n",
     "    \"version\": 2,\n",
     "    \"data\": {\n",
@@ -338,7 +404,7 @@
     "    },\n",
     "}\n",
     "\n",
-    "# Step 9: Write the output to a JSON file (stored in gadm folder)\n",
+    "# Write the output to a JSON file (stored in gadm folder)\n",
     "with open(output_file, \"w\") as f:\n",
     "    json.dump(output_locations_combined, f)\n",
     "\n",
@@ -347,20 +413,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Create locations_code (stored in gadm folder)\n",
-    "(combined_locations[['id', 'code']]\n",
+    "(combined_locations[['id', 'code']].rename(columns={'id': 'location'})\n",
     " .to_csv(pipe_gadm_dir.get_processed_step_path(current_step)\n",
-    "     .joinpath('locations_code.csv'), index=False))\n"
+    "     .joinpath('locations_code_all.csv'), index=False))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Save locations_code in data_commons/data folder\n",
+    "(combined_locations[['id', 'code']].rename(columns={'id': 'location'})\n",
+    " .to_csv(scripts_dir.joinpath('data_commons/data/locations_code_all.csv'), index=False))"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
