simplify conservation chart title

--- a/frontend/translations/en.json
+++ b/frontend/translations/en.json
@@ -272,18 +272,12 @@
       "show": "Show",
       "remove": "Remove",
       "close": "Close",
-      "environmental-conservation-national-regional-levels": "Environmental Conservation at National and Regional Levels",
-      "environmental-conservation-location": "Environmental Conservation for '{location'}",
+      "national-regional-levels": "National and Regional Levels",
+      "location": "'{location'}",
       "environmental-conservation": "Environmental Conservation",
-      "terrestrial-conservation-national-regional-levels": "Terrestrial Conservation at National and Regional Levels",
-      "terrestrial-conservation-location": "Terrestrial Conservation for '{location'}",
       "terrestrial-conservation": "Terrestrial Conservation",
-      "marine-conservation-national-regional-levels": "Marine Conservation at National and Regional Levels",
-      "environmental-conservation-high-seas": "Environmental Conservation for High Seas",
-      "terrestrial-conservation-high-seas": "Terrestrial Conservation for High Seas",
-      "marine-conservation-location": "Marine Conservation for '{location'}",
+      "high-seas": "High Seas",
       "marine-conservation": "Marine Conservation",
-      "marine-conservation-high-seas": "Marine Conservation for High Seas",
       "name": "Name",
       "coverage": "Coverage",
       "area": "Area",
